--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,22 @@ cache:
 
 script: "./gradlew clean build"
 
+defore_deploy:
+  - zip -r springboot-with-aws *
+  - mkdir -r deploy
+  - mv springboot-with-aws.zip deploy/springboot-with-aws.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: springboot-with-aws-build
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
+
 notifications:
   email:
     recipients:
