--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,13 @@ cache:
 script: "./gradlew clean build"
 
 defore_deploy:
-  - zip -r springboot-with-aws *
-  - mkdir -p deploy
-  - mv springboot-with-aws.zip deploy/springboot-with-aws.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.war defore-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/springboot-with-aws.zip
 
 deploy:
   - provider: s3
