--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ defore_deploy:
   - mkdir -p before-deploy
   - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
-  - cp build/libs/*.war defore-deploy/
+  - cp build/libs/*.war before-deploy/
   - cd before-deploy && zip -r before-deploy *
   - cd ../ && mkdir -p deploy
   - mv before-deploy/before-deploy.zip deploy/springboot-with-aws.zip
