--- a/appspec.yml
+++ b/appspec.yml
@@ -12,7 +12,7 @@ permissions:
     group: ec2-user
 
 hooks:
-  ApplicationsStart:
+  ApplicationStart:
     - location: deploy.sh
       timeout: 60
       runas: ec2-user
